# sms-redis-webhook

./: .env.template  Cargo.toml  README.md  webhook.yml
misc/: nginx_route  webhookserver.service
src/: main.rs  messages.rs  scheduler.rs  settings.rs
src/web/: authentication.rs  mod.rs  routes.rs
