[package]
name = "sms-redis-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
log = "0.4.22"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
simplelog = "0.12"
actix = "0.13.5"
actix-web = { version = "4.9.0", features = ["rustls-0_21"] }
rustls = { version = "0.21" }
rustls-pemfile = "1.0"

serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.133"
handlebars = "6.2.0"
subprocess = "0.2.9"
config = "0.14.1"
dirs = "5"
chrono = { version="0.4", features=["serde"] }
futures = "0.3"
redis = { version = "0.27.5", default-features = false, features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
dotenvy = "0.15.7"
orion = "0.17.7"

generic-array = "0.14"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.22"
hex = "0.4"